Clean up some wasted vertical space in sidebar
Clean up some wasted vertical space in sidebar and make other small
changes so more fits on 1366x768 screens (most common res) without
scrolling.

--- a/style.css
+++ b/style.css
@@ -375,7 +375,7 @@ h2 #signout {
 h2 sup, h2 sub {
   display: block;
   font-size: 11px;
-  margin-bottom: -1px;
+  margin-bottom: -2px;
 }
 
 
@@ -408,8 +408,8 @@ input {
   background-color: rgba(0, 0, 0, 0.3);
   color: #ffce00;
   height: 24px;
-  padding:3px 4px 1px 4px;
-  font-size: 14px;
+  padding:0px 4px 0px 4px;
+  font-size: 12px;
   border:0;
   font-family:inherit;
   -webkit-box-sizing: border-box;
@@ -437,10 +437,10 @@ input {
 
 /* portal title and image */
 h3 {
-  font-size: 17px;
+  font-size: 16px;
   padding: 0 4px;
   margin:0;
-  height: 25px;
+  height: 23px;
   width: 100%;
   overflow:hidden;
   text-overflow: "~";
@@ -451,7 +451,7 @@ h3 {
 }
 
 .imgpreview {
-  height: 200px;
+  height: 190px;
   background: no-repeat center center;
   background-size: contain;
   cursor: help;
@@ -472,10 +472,9 @@ h3 {
 
 /* portal mods */
 .mods {
-  margin: 5px auto 1px auto;
-  padding: 0 2px;
+  margin: 3px auto 1px auto;
   width: 296px;
-  height: 75px;
+  height: 67px;
   text-align: center;
 }
 
@@ -532,6 +531,7 @@ h3 {
   font-weight: normal;
   text-align: right;
   width: 62px;
+  padding:0px;
   padding-right:4px;
   padding-left:4px;
 }
@@ -554,8 +554,8 @@ h3 {
 
 
 #randdetails {
-  margin-top: 9px;
-  margin-bottom: 9px;
+  margin-top: 4px;
+  margin-bottom: 5px;
 }
 
 
@@ -566,7 +566,7 @@ h3 {
 
 /* resonators */
 #resodetails {
-  margin-bottom: 9px;
+  margin-bottom: 0px;
 }
 
 .meter {
@@ -599,7 +599,7 @@ h3 {
 /* links below resos */
 
 .linkdetails {
-  margin-bottom: 8px;
+  margin-bottom: 0px;
 }
 
 aside {
@@ -609,6 +609,10 @@ aside {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   text-align: center;
+}
+
+.linkdetails aside a{
+  font-size:12px;
 }
 
 .linkdetails aside:last-child {
@@ -630,19 +634,20 @@ aside {
 }
 
 #toolbox {
-  padding: 4px 2px;
+  padding: 2px;
   font-size:90%;
 }
 
 #toolbox > a {
-  padding: 4px;
+  padding: 2px;
+  padding-right:6px;
 }
 
 /* a common portal display takes this much space (prevents moving
  * content when first selecting a portal) */
 
 #portaldetails {
-  min-height: 553px;
+  min-height: 495px;
 }
 
 
