overflow-y: hidden -> auto
Fixed the sidebar scrolling problem for Opera users.

--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body {
 }
 
 #scrollwrapper {
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   position: fixed;
   right: -38px;
   top: 0;
