--- a/plugins/keys.css
+++ b/plugins/keys.css
@@ -13,6 +13,7 @@
 
 #keys-label {
   padding: 0 4px;
+  cursor: help;
 }
 
 #keys-add {
@@ -23,6 +24,7 @@
   height: 18px !important;
   border: 1px solid;
   text-align: center;
+  cursor: help;
 }
 
 #keys-subtract {
@@ -55,4 +57,10 @@
   width: 4px;
   height: 100%;
   left: 6px;
+}
+
+#keys-help {
+  font-weight: 900;
+  margin: 6px 3px 1px 20px !important;
+  cursor: help;
 }
