--- a/plugins/ap-list.css
+++ b/plugins/ap-list.css
@@ -93,9 +93,8 @@
 }
 
 .ap-list-center-div {
-  width: 50%;
+  width: 55%;
   margin: 0px auto;
-
 }
 
 .ap-list-page-control {
@@ -145,4 +144,15 @@
 
 .ap-list-triangle-right-full {
   border-width: 7.5px 0px 7.5px 13px;
+}
+#ap-list-pagination {
+  display: inline-block;
+  width: 90%;
+  vertical-align: bottom;
+}
+
+#ap-list-misc-info {
+  display: inline-block;
+  vertical-align: bottom;
+  padding: 0px 6px;
 }
