--- a/mobile/res/xml/preferences.xml
+++ b/mobile/res/xml/preferences.xml
@@ -3,6 +3,7 @@
     <CheckBoxPreference
         android:key="pref_force_desktop"
         android:title="@string/pref_force_desktop"
+        android:summary="@string/pref_force_desktop_sum"
         android:defaultValue="true" />
     <ListPreference
         android:key="pref_build_version"
