--- a/mobile/smartphone.css
+++ b/mobile/smartphone.css
@@ -13,6 +13,12 @@ body {
   margin-top: 40px !important;
 }
 
+.leaflet-control-zoom {
+  margin-left: 5px !important;
+  margin-top: 80px !important;
+}
+
+
 #chatcontrols {
   height: 38px;
   width: 100%;
