added IITC version info to settings

--- a/mobile/res/xml/preferences.xml
+++ b/mobile/res/xml/preferences.xml
@@ -21,5 +21,11 @@
 	        android:title="@string/build_version"
 	        android:enabled="false"
 	        android:selectable="false" />
+
+		<ListPreference
+	        android:key="pref_iitc_version"
+	        android:title="@string/iitc_version"
+	        android:enabled="false"
+	        android:selectable="false" />
     </PreferenceCategory>
 </PreferenceScreen>
