add highlight to SYSTEM_NARROWCAST (your X on Y was destroyed by Z) messages

--- a/style.css
+++ b/style.css
@@ -249,6 +249,10 @@ em {
   white-space: nowrap;
 }
 
+#chat td .system_narrowcast {
+  color: #f66 !important;
+}
+
 mark {
   background: transparent;
 }
