--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ a:hover {
   background: rgba(8, 48, 78, 0.9);
   position: absolute;
   left: 0;
-  z-index: 3001;
+  z-index: 99999;
   height: 26px;
   padding-left:1px;
 }
@@ -174,7 +174,7 @@ a:hover {
   width: 708px;
   bottom: 23px;
   left: 0;
-  z-index: 3000;
+  z-index: 99999;
   background: rgba(8, 48, 78, 0.9);
   font-size: 12.6px;
   color: #eee;
@@ -814,4 +814,14 @@ td + td {
 
 .ALIENS {
   color: #28f428;
+}
+
+#portal_highlight_select{
+  position: absolute;
+  top:10px;
+  left:60px;
+  z-index: 9999;
+  font-size:11px;
+  font-family: "coda",arial,helvetica,sans-serif;
+  
 }
