--- a/style.css
+++ b/style.css
@@ -823,9 +823,11 @@ td + td {
 #portal_highlight_select{
   position: absolute;
   top:10px;
-  left:60px;
+  left:70px;
   z-index: 9999;
   font-size:11px;
   font-family: "coda",arial,helvetica,sans-serif;
+  background-color:#0E3C46;
+  color:#ffce00;
   
 }
