--- a/mobile/res/menu/main.xml
+++ b/mobile/res/menu/main.xml
@@ -10,6 +10,11 @@
         android:showAsAction="never"
         android:title="@string/action_settings"></item>
 
+    <item android:id="@+id/about"
+        android:orderInCategory="1200"
+        android:showAsAction="never"
+        android:title="@string/action_about"></item>
+
     <item android:id="@+id/cache_clear"
         android:orderInCategory="100"
         android:showAsAction="never"
