--- a/style.css
+++ b/style.css
@@ -602,42 +602,23 @@ h3 {
   margin-left: -6px;
   text-shadow: 0.0em 0.0em 0.3em #808080;
 }
+
 /* links below resos */
 
 .linkdetails {
   margin-bottom: 0px;
-}
-
-aside {
-  display: inline-block;
-  padding-right: 9px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
   text-align: center;
 }
 
-.linkdetails aside a{
-  font-size:12px;
+.linkdetails aside {
+  display: inline-block;
+  white-space: nowrap;
+  font-size: 12px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
-.linkdetails aside:last-child {
-  padding-right: 0;
-}
 
-.linkdetails aside:nth-child(1) {
-  text-align: right;
-  width:88px;
-}
-
-.linkdetails aside:nth-child(2) {
-  text-align: right;
-  width:67px;
-}
-
-.linkdetails aside:nth-child(4) {
-  margin-left:13px;
-}
 
 #toolbox {
   padding: 2px;
@@ -653,7 +634,7 @@ aside {
  * content when first selecting a portal) */
 
 #portaldetails {
-  min-height: 495px;
+  min-height: 485px;
 }
 
 
