--- a/mobile/res/xml/preferences.xml
+++ b/mobile/res/xml/preferences.xml
@@ -17,6 +17,11 @@
         android:title="@string/pref_force_desktop"
         android:summary="@string/pref_force_desktop_sum"
         android:defaultValue="false" />
+    <CheckBoxPreference
+        android:key="pref_user_loc"
+        android:title="@string/pref_user_loc"
+        android:summary="@string/pref_user_loc_sum"
+        android:defaultValue="false" />
     <MultiSelectListPreference
         android:key="pref_plugins"
         android:title="@string/pref_plugins"
