--- a/mobile/res/xml/preferences.xml
+++ b/mobile/res/xml/preferences.xml
@@ -12,31 +12,35 @@
     <PreferenceCategory
         android:key="pref_about_cat"
         android:title="@string/pref_ui_cat">
-    <CheckBoxPreference
-        android:key="pref_force_desktop"
-        android:title="@string/pref_force_desktop"
-        android:summary="@string/pref_force_desktop_sum"
-        android:defaultValue="false" />
-    <CheckBoxPreference
-        android:key="pref_user_loc"
-        android:title="@string/pref_user_loc"
-        android:summary="@string/pref_user_loc_sum"
-        android:defaultValue="false" />
-    <MultiSelectListPreference
-        android:key="pref_plugins"
-        android:title="@string/pref_plugins"
-        android:dialogTitle="@string/pref_plugins_title"/>
+	    <CheckBoxPreference
+	        android:key="pref_force_desktop"
+	        android:title="@string/pref_force_desktop"
+	        android:summary="@string/pref_force_desktop_sum"
+	        android:defaultValue="false" />
+	    <CheckBoxPreference
+	        android:key="pref_user_loc"
+	        android:title="@string/pref_user_loc"
+	        android:summary="@string/pref_user_loc_sum"
+	        android:defaultValue="false" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="pref_mics"
+        android:title="@string/pref_misc_cat">
+        <EditTextPreference
+            android:key="pref_iitc_source"
+            android:title="@string/pref_select_iitc"
+            android:summary="Load IITC main script from url or use local script. Currently used source: "
+            android:defaultValue="local"/>
+	    <MultiSelectListPreference
+	        android:key="pref_plugins"
+	        android:title="@string/pref_plugins"
+	        android:dialogTitle="@string/pref_plugins_title"/>
     </PreferenceCategory>
 
     <PreferenceCategory
         android:key="pref_developer_options"
         android:title="@string/pref_developer_options">
-
-        <EditTextPreference
-            android:key="pref_iitc_source"
-            android:title="@string/pref_select_iitc"
-            android:summary=""
-            android:defaultValue="local"/>
 
 	    <CheckBoxPreference
 	        android:key="pref_dev_checkbox"
