--- a/mobile/res/menu/main.xml
+++ b/mobile/res/menu/main.xml
@@ -15,6 +15,11 @@
         android:showAsAction="never"
         android:title="@string/cache_clear"></item>
 
+    <item android:id="@+id/toggle_fullscreen"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/toggle_fullscreen"></item>
+
     <item android:id="@+id/locate"
         android:icon="@android:drawable/ic_menu_mylocation"
         android:orderInCategory="80"
