--- a/mobile/res/menu/main.xml
+++ b/mobile/res/menu/main.xml
@@ -27,4 +27,9 @@
         android:showAsAction="ifRoom"
         android:title="@string/locate"></item>
 
+    <item android:id="@+id/info"
+        android:orderInCategory="160"
+        android:showAsAction="never"
+        android:title="@string/action_info"></item>
+    
 </menu>
