Zoom control is now only disabled on multitouch capable devices by default and can be forced on again via a preference.

--- a/mobile/res/xml/preferences.xml
+++ b/mobile/res/xml/preferences.xml
@@ -13,11 +13,16 @@
         android:key="pref_about_cat"
         android:title="@string/pref_ui_cat">
 	    <CheckBoxPreference
+	        android:key="pref_user_zoom"
+	        android:title="@string/pref_user_zoom"
+	        android:summary="@string/pref_user_zoom_sum"
+	        android:defaultValue="false" />
+	    <CheckBoxPreference
 	        android:key="pref_user_loc"
 	        android:title="@string/pref_user_loc"
 	        android:summary="@string/pref_user_loc_sum"
 	        android:defaultValue="false" />
-    </PreferenceCategory>
+	    </PreferenceCategory>
 
     <PreferenceCategory
         android:key="pref_mics"
