Fixed style overriding css to hide chat control tabs.

--- a/mobile/smartphone.css
+++ b/mobile/smartphone.css
@@ -30,7 +30,7 @@ body {
 #chatcontrols {
   height: 38px;
   width: 100%;
-  display: hidden;
+  display: none !important;
 }
 
 /* hide shrink button */
