--- a/mobile/smartphone.css
+++ b/mobile/smartphone.css
@@ -8,19 +8,14 @@ body {
 }
 
 .leaflet-top .leaflet-control {
-  margin-top: 0 !important;
+  margin-top: 5px !important;
+  margin-left: 5px !important;
 }
 
 .leaflet-control-layers {
   margin-left: 0 !important;
   margin-top: 0 !important;
 }
-
-.leaflet-top .leaflet-control-zoom {
-  margin-left: 5px !important;
-  margin-top: 30px !important;
-}
-
 
 #geosearch {
   width: 100%;
@@ -129,6 +124,11 @@ body {
   display: none;
 }
 
+.leaflet-control-layers-toggle {
+    width: 50px !important;
+    height: 50px !important;
+}
+
 .leaflet-control-layers-list label {
   padding: 6px 0;
 }
@@ -138,13 +138,6 @@ body {
 }
 
 #portal_highlight_select{
-  position: absolute;
-  top:42px;
-  left:310px;
-  z-index: 9999;
-  font-size:11px;
-  font-family: "coda",arial,helvetica,sans-serif;
-  background-color:#0E3C46;
-  color:#ffce00;
-  
+  top:0px !important;
+  left:60px !important;
 }
