minor status bar tweaks - make L8 not show L8+ - add a little margin between the level info and the map status - may need reducing a little for mobile - indentation fixes, minor cleanups

--- a/style.css
+++ b/style.css
@@ -684,6 +684,10 @@ h3 {
   box-sizing: border-box;
 }
 
+#updatestatus .map {
+  margin-left: 8px;
+}
+
 /* Dialogs
  */
 .ui-tooltip, .ui-dialog {
