--- a/mobile/res/menu/main.xml
+++ b/mobile/res/menu/main.xml
@@ -76,6 +76,12 @@
         android:title="@string/action_settings">
     </item>
     <item
+        android:id="@+id/layer_chooser"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/layer_chooser">
+    </item>
+    <item
         android:id="@+id/menu_debug"
         android:icon="@drawable/alerts_and_states_warning"
         android:orderInCategory="190"
