--- a/mobile/res/menu/main.xml
+++ b/mobile/res/menu/main.xml
@@ -1,5 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
+    <item android:id="@+id/menu_search"
+          android:title="@string/menu_search"
+          android:icon="@drawable/action_search"
+          android:showAsAction="ifRoom|collapseActionView"
+          android:actionViewClass="android.widget.SearchView" />
     <item
         android:id="@+id/menu_map"
         android:icon="@drawable/location_map"
