--- a/mobile/res/xml/preferences.xml
+++ b/mobile/res/xml/preferences.xml
@@ -12,22 +12,27 @@
     <PreferenceCategory
         android:key="pref_about_cat"
         android:title="@string/pref_ui_cat">
-	    <CheckBoxPreference
+        <CheckBoxPreference
 	        android:key="pref_user_loc"
 	        android:title="@string/pref_user_loc"
 	        android:summary="@string/pref_user_loc_sum"
-	        android:defaultValue="false" />
-	    <CheckBoxPreference
-                android:key="pref_user_zoom"
-                android:title="@string/pref_user_zoom"
-                android:summary="@string/pref_user_zoom_sum"
-	        android:defaultValue="false" />
-	    <CheckBoxPreference
-                android:key="pref_fullscreen_actionbar"
-                android:title="@string/pref_fullscreen_actionbar"
-                android:summary="@string/pref_fullscreen_actionbar_sum"
-	        android:defaultValue="false" />
-            </PreferenceCategory>
+            android:defaultValue="false" />
+        <CheckBoxPreference
+            android:key="pref_user_zoom"
+            android:title="@string/pref_user_zoom"
+            android:summary="@string/pref_user_zoom_sum"
+            android:defaultValue="false" />
+        <CheckBoxPreference
+            android:key="pref_fullscreen_actionbar"
+            android:title="@string/pref_fullscreen_actionbar"
+            android:summary="@string/pref_fullscreen_actionbar_sum"
+            android:defaultValue="false" />
+        <CheckBoxPreference
+	        android:key="pref_force_desktop"
+            android:title="@string/pref_force_desktop"
+            android:summary="@string/pref_force_desktop_sum"
+            android:defaultValue="false" />
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:key="pref_mics"
